front end finetuning

--- a/AdminClient/Content/Site.css
+++ b/AdminClient/Content/Site.css
@@ -1,24 +1,41 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+
+:root {
+    --carsales-blue: #004f85;
+    --base-padding: 1rem;
+    --base-margin: 1rem;
+    --gray: #ccc;
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+body, html {
+    width: 100%;
+    height: 100%;
+    font-family: 'Open Sans', sans-serif;
+    margin: 0 !important;
+    padding:0;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
+h1{
+    font-size: 24px;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+* {
+    box-sizing: border-box;
+}
+
+.body-content{
+    padding: 0.5rem;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.message-box{
+    border: 2px solid var(--gray);
+    border-radius:3px;
+    padding: var(--base-padding);
+    margin: var(--base-margin);
+    font-size: 14px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
 }
